* Added support for --human-readable option to muninn-search.

* Added explicit 'max concurrent requests' setting for sftp remote backend to
  prevent potential request flooding of sftp servers when downloading large
  files (which could result in very slow download behaviour).

7.2.1 2025-10-31
~~~~~~~~~~~~~~~~

* Fixed issue where a Geometry linearring was stored using a duplicate closing
  point in the database.

7.2.0 2025-10-29
~~~~~~~~~~~~~~~~

* Added support for defining s3fs mappings in the muninn archive config
  for mapping 'remote_url' s3 urls (mostly useful when storage=none).

7.1.0 2025-10-20
~~~~~~~~~~~~~~~~

* Added --update-properties option to muninn-pull.

7.0.2 2025-10-10
~~~~~~~~~~~~~~~~

* Fixed issue where a Geometry Linearring could not be closed or had a
  duplicate closing point.

7.0.1 2025-08-25
~~~~~~~~~~~~~~~~

* Fixed incorrect unit of sizes >= Petabyte for the -H command line option.

* 'muninn-search --path' now shows the content of remote_url if a product
  is not in the archive. A leading file:// in the remote_url is then omitted.

* Allow muninn-sync start/end arguments to be a date+time argument.

7.0 2025-08-14
~~~~~~~~~~~~~~

* Added catalogue synchronizer functionality to muninn. This introduces
  muninn-sync, archive.sync(), and a new synchronizer extension interface.

* Added -n/--name-only option to muninn-info.

6.5 2025-03-25
~~~~~~~~~~~~~~

* Added support for optional `auth_args` setting in credentials file for
  oauth2 token requests.

6.4.2 2025-02-24
~~~~~~~~~~~~~~~~

* Fixed issue with loading spatialite for versions of sqlite that were
  build to disallow DQS (double-quoted string literals).

6.4.1 2024-08-14
~~~~~~~~~~~~~~~~

* Fixed issue where only 'dict' values could be stored as a JSON property.

6.4 2024-03-14
~~~~~~~~~~~~~~

* Allow argument to muninn.open() to be a direct url or path to a muninn
  configuration file.

* Added 'distance(geometry,geometry)' expression function.
